# telegram-gspread-bookmarks

./: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
systemd/: telegram-gspread-bookmarks.service  telegram_gspread_bookmarks.service
