[tool.poetry]
name = "telegram_gspread_bookmarks"
version = "0.1.0"
description = "Send bookmarks to telegram and store it in a google spread sheet"
authors = ["Alvaro Garcia <maxpowel@gmail.com>"]
license = "Apache2"

[tool.poetry.dependencies]
python = "^3.8"
gspread = "^5.4.0"
python-telegram-bot = {version = "^20.0a0", allow-prereleases = true}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
